Fixed course card text overflow

--- a/frontend/src/index/css/courses-view.css
+++ b/frontend/src/index/css/courses-view.css
@@ -37,9 +37,8 @@
 	display:table;
 	border-top-left-radius:var(--main-border-radius);
 	border-top-right-radius:var(--main-border-radius);
-	overflow: hidden !important;
 	width:100%;
-	height:210px;
+	height:200px;
 	color: #ffffff;
 	text-align: center;
 }
@@ -57,8 +56,9 @@
 .course-card-header > div > h3 {
 	margin:0;
 	padding:0;
-	font-size:1.6vw;
-	line-height: 35px;
-	max-height:195px;
+	width:calc(390px - 20px * 2);
+	font-size:26px;
+	line-height:0.98;
+	max-height:160px;
 	overflow-wrap:break-word;
 }
